--- a/src/main/resources/views/inicio.fxml
+++ b/src/main/resources/views/inicio.fxml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
+<AnchorPane fx:id="ventana" prefHeight="600.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventasR.Controller.InicioController">
+   <children>
+      <Label layoutX="252.0" layoutY="38.0" text="Bienvenidos">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Button fx:id="btnClientes" layoutX="152.0" layoutY="201.0" mnemonicParsing="false" onAction="#clientesEvent" prefHeight="57.0" prefWidth="129.0" text="Clientes" />
+      <Button fx:id="btnProductos" layoutX="315.0" layoutY="201.0" mnemonicParsing="false" onAction="#productosEfvent" prefHeight="57.0" prefWidth="129.0" text="Productos" />
+      <Label layoutX="248.0" layoutY="108.0" text="Que desea registrar...?" />
+   </children>
 </AnchorPane>
