--- a/src/main/resources/views/registroCliente.fxml
+++ b/src/main/resources/views/registroCliente.fxml
@@ -5,16 +5,15 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="ventana" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventasR.Controller.RegistroClientesController">
    <children>
-      <Label layoutX="110.0" layoutY="48.0" text="Seleccione el tipo de cliente que desea registrar">
+      <Label layoutX="249.0" layoutY="57.0" text="Seleccione el tipo de cliente que desea registrar">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="btnClienteNatural" layoutX="169.0" layoutY="175.0" mnemonicParsing="false" onAction="#clienteNaturalEvent" prefHeight="79.0" prefWidth="118.0" text="Cliente Natural" />
-      <Button fx:id="btnAtras" layoutX="14.0" layoutY="355.0" mnemonicParsing="false" onAction="#atrasEvent" text="Atras" />
-      <Button fx:id="btnClienteJuridico" layoutX="320.0" layoutY="175.0" mnemonicParsing="false" onAction="#clienteJuridicoEvent" prefHeight="79.0" prefWidth="118.0" text="Cliente Juridico" />
+      <Button fx:id="btnClienteNatural" layoutX="220.0" layoutY="267.0" mnemonicParsing="false" onAction="#clienteNaturalEvent" prefHeight="79.0" prefWidth="118.0" text="Cliente Natural" />
+      <Button fx:id="btnAtras" layoutX="33.0" layoutY="541.0" mnemonicParsing="false" onAction="#atrasEvent" text="Atras" />
+      <Button fx:id="btnClienteJuridico" layoutX="453.0" layoutY="267.0" mnemonicParsing="false" onAction="#clienteJuridicoEvent" prefHeight="79.0" prefWidth="118.0" text="Cliente Juridico" />
    </children>
 </AnchorPane>
