Se arreglan pequeños errores
Se arreglan los fallos de las tablas

--- a/src/main/resources/views/inicio.fxml
+++ b/src/main/resources/views/inicio.fxml
@@ -3,17 +3,42 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="ventana" prefHeight="600.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventasR.Controller.InicioController">
+<AnchorPane fx:id="ventana" prefHeight="600.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventasR.Controller.InicioController">
    <children>
-      <Label layoutX="252.0" layoutY="38.0" text="Bienvenidos">
+      <Label layoutX="302.0" layoutY="47.0" text="Bienvenidos">
          <font>
-            <Font size="18.0" />
+            <Font size="24.0" />
          </font>
       </Label>
-      <Button fx:id="btnClientes" layoutX="152.0" layoutY="201.0" mnemonicParsing="false" onAction="#clientesEvent" prefHeight="57.0" prefWidth="129.0" text="Clientes" />
-      <Button fx:id="btnProductos" layoutX="315.0" layoutY="201.0" mnemonicParsing="false" onAction="#productosEfvent" prefHeight="57.0" prefWidth="129.0" text="Productos" />
-      <Label layoutX="248.0" layoutY="108.0" text="Que desea registrar...?" />
+      <Label layoutX="278.0" layoutY="170.0" text="Que desea registrar...?">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <GridPane layoutX="232.0" layoutY="266.0" prefHeight="159.0" prefWidth="269.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Button fx:id="btnClientes" mnemonicParsing="false" onAction="#clientesEvent" prefHeight="57.0" prefWidth="129.0" text="Clientes">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+            <Button fx:id="btnProductos" mnemonicParsing="false" onAction="#productosEfvent" prefHeight="57.0" prefWidth="129.0" text="Productos" GridPane.columnIndex="1">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
