--- a/src/main/resources/views/registroCliente.fxml
+++ b/src/main/resources/views/registroCliente.fxml
@@ -3,17 +3,39 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="ventana" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventasR.Controller.RegistroClientesController">
+<AnchorPane fx:id="ventana" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventasR.Controller.RegistroClientesController">
    <children>
-      <Label layoutX="249.0" layoutY="57.0" text="Seleccione el tipo de cliente que desea registrar">
+      <Label layoutX="201.0" layoutY="116.0" text="Seleccione el tipo de cliente que desea registrar">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="btnClienteNatural" layoutX="220.0" layoutY="267.0" mnemonicParsing="false" onAction="#clienteNaturalEvent" prefHeight="79.0" prefWidth="118.0" text="Cliente Natural" />
       <Button fx:id="btnAtras" layoutX="33.0" layoutY="541.0" mnemonicParsing="false" onAction="#atrasEvent" text="Atras" />
-      <Button fx:id="btnClienteJuridico" layoutX="453.0" layoutY="267.0" mnemonicParsing="false" onAction="#clienteJuridicoEvent" prefHeight="79.0" prefWidth="118.0" text="Cliente Juridico" />
+      <GridPane layoutX="222.0" layoutY="223.0" prefHeight="154.0" prefWidth="386.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Button fx:id="btnClienteNatural" mnemonicParsing="false" onAction="#clienteNaturalEvent" prefHeight="79.0" prefWidth="151.0" text="Cliente Natural">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+            <Button fx:id="btnClienteJuridico" mnemonicParsing="false" onAction="#clienteJuridicoEvent" prefHeight="78.0" prefWidth="154.0" text="Cliente Juridico" GridPane.columnIndex="1">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
