--- a/src/main/resources/views/registroClientesJuridicos.fxml
+++ b/src/main/resources/views/registroClientesJuridicos.fxml
@@ -6,39 +6,83 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="ventana" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventasR.Controller.RegistroClienteJuridicoController">
+<AnchorPane fx:id="ventana" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventasR.Controller.RegistroClienteJuridicoController">
     <children>
-        <Label layoutX="353.0" layoutY="23.0" text="Registro clientes">
+        <Label layoutX="301.0" layoutY="21.0" text="Registro clientes juridico">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <TextField fx:id="txtNombre" layoutX="156.0" layoutY="126.0" />
-        <TextField fx:id="txtApellido" layoutX="156.0" layoutY="173.0" />
-        <TextField fx:id="txtIdentificacion" layoutX="156.0" layoutY="224.0" />
-        <Label layoutX="45.0" layoutY="130.0" text="Nombre:" />
-        <Label layoutX="45.0" layoutY="177.0" text="Apellido:" />
-        <Label layoutX="45.0" layoutY="228.0" text="Identificacion:" />
-        <Label layoutX="45.0" layoutY="280.0" text="Direccion:" />
-        <Label layoutX="47.0" layoutY="329.0" text="Telefono:" />
         <Label layoutX="238.0" layoutY="345.0" />
-        <TextField fx:id="txtDireccion" layoutX="156.0" layoutY="276.0" />
-        <Label layoutX="59.0" layoutY="384.0" text="Nit:" />
-        <TextField fx:id="txtTelefono" layoutX="156.0" layoutY="325.0" />
-        <TextField fx:id="txtNit" layoutX="156.0" layoutY="380.0" />
-        <Button fx:id="btnRegistrarCliente" layoutX="46.0" layoutY="468.0" mnemonicParsing="false" onAction="#registrarClienteEvent" text="Registrar" />
-        <Button fx:id="btnEliminarCliente" layoutX="294.0" layoutY="468.0" mnemonicParsing="false" onAction="#eliminarClienteEvent" style="-fx-background-color: #jjj000;" text="Eliminar" />
-        <Button fx:id="btnActualizarCliente" layoutX="156.0" layoutY="468.0" mnemonicParsing="false" onAction="#actualizarClienteEvent" text="Actualizar" />
-        <Button fx:id="btnVentas" layoutX="691.0" layoutY="539.0" mnemonicParsing="false" onAction="#ventasEvent" text="Ir a Ventas" />
-      <TableView fx:id="tabClientesJuridicos" layoutX="457.0" layoutY="126.0" prefHeight="289.0" prefWidth="220.0">
+        <Button fx:id="btnRegistrarCliente" layoutX="123.0" layoutY="468.0" mnemonicParsing="false" onAction="#registrarClienteEvent" text="Registrar" />
+        <Button fx:id="btnEliminarCliente" layoutX="398.0" layoutY="468.0" mnemonicParsing="false" onAction="#eliminarClienteEvent" style="-fx-background-color: #jjj000;" text="Eliminar" />
+        <Button fx:id="btnActualizarCliente" layoutX="248.0" layoutY="468.0" mnemonicParsing="false" onAction="#actualizarClienteEvent" text="Actualizar" />
+        <Button fx:id="btnVentas" layoutX="669.0" layoutY="552.0" mnemonicParsing="false" onAction="#ventasEvent" text="Ir a productos" />
+      <TableView fx:id="tabClientesJuridicos" layoutX="457.0" layoutY="126.0" prefHeight="289.0" prefWidth="302.0">
         <columns>
           <TableColumn fx:id="columNombre" prefWidth="75.0" text="Nombre" />
           <TableColumn fx:id="columId" prefWidth="90.0" text="Identificacion" />
-            <TableColumn fx:id="columNit" prefWidth="60.0" text="Nit" />
+            <TableColumn fx:id="columTelefono" prefWidth="60.0" text="Telefono" />
+            <TableColumn fx:id="columNit" prefWidth="75.0" text="Nit" />
         </columns>
       </TableView>
       <Button fx:id="btnAtras" layoutX="19.0" layoutY="539.0" mnemonicParsing="false" onAction="#atrasEvent" text="Atras" />
+      <GridPane layoutX="78.0" layoutY="111.0" prefHeight="320.0" prefWidth="286.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+              <Label text="Nombre:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <Label text="Apellido:" GridPane.rowIndex="1">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <Label text="Identificacion:" GridPane.rowIndex="2">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <Label text="Direccion:" GridPane.rowIndex="3">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <Label text="Telefono:" GridPane.rowIndex="4">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <Label text="Nit:" GridPane.rowIndex="5">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <TextField fx:id="txtNombre" promptText="Ingrese el nombre" GridPane.columnIndex="1" />
+              <TextField fx:id="txtApellido" promptText="Ingrese el apellido" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+              <TextField fx:id="txtIdentificacion" promptText="Ingrese la identificacion" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+              <TextField fx:id="txtDireccion" promptText="Ingrese la direccion" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+              <TextField fx:id="txtTelefono" promptText="Ingrese el telefono" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+              <TextField fx:id="txtNit" promptText="Ingrese el nit" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+         </children>
+      </GridPane>
     </children>
 </AnchorPane>
