--- a/src/main/resources/views/registroClientesNaturales.fxml
+++ b/src/main/resources/views/registroClientesNaturales.fxml
@@ -7,34 +7,23 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="ventana" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventasR.Controller.RegistroClienteNaturalController">
+<AnchorPane fx:id="ventana" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventasR.Controller.RegistroClienteNaturalController">
     <children>
         <Label layoutX="283.0" layoutY="26.0" text="Registro Clientes Naturales">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <TextField fx:id="txtNombre" layoutX="187.0" layoutY="126.0" />
-        <TextField fx:id="txtApellido" layoutX="187.0" layoutY="173.0" />
-        <TextField fx:id="txtIdentificacion" layoutX="187.0" layoutY="224.0" />
-        <Label layoutX="94.0" layoutY="130.0" text="Nombre:" />
-        <Label layoutX="94.0" layoutY="177.0" text="Apellido:" />
-        <Label layoutX="94.0" layoutY="228.0" text="Identificacion:" />
-        <Label layoutX="94.0" layoutY="280.0" text="Direccion:" />
-        <Label layoutX="96.0" layoutY="329.0" text="Telefono:" />
         <Label layoutX="238.0" layoutY="345.0" />
-        <TextField fx:id="txtDireccion" layoutX="187.0" layoutY="276.0" />
-        <Label layoutX="102.0" layoutY="384.0" text="Email:" />
-        <Label layoutX="82.0" layoutY="435.0" text="Fecha Nacimiento:" />
-        <TextField fx:id="txtTelefono" layoutX="187.0" layoutY="325.0" />
-        <TextField fx:id="txtEmail" layoutX="187.0" layoutY="380.0" />
-        <DatePicker fx:id="dateFechaN" layoutX="187.0" layoutY="431.0" prefHeight="25.0" prefWidth="163.0" />
         <Button fx:id="btnRegistrarCliente" layoutX="187.0" layoutY="491.0" mnemonicParsing="false" onAction="#registrarClienteEvent" text="Registrar" />
         <Button fx:id="btnEliminarCliente" layoutX="627.0" layoutY="431.0" mnemonicParsing="false" onAction="#eliminarClienteEvent" style="-fx-background-color: #jjj000;" text="Eliminar" />
         <Button fx:id="btnActualizarCliente" layoutX="470.0" layoutY="431.0" mnemonicParsing="false" onAction="#actualizarClienteEvent" text="Actualizar" />
-        <Button fx:id="btnVentas" layoutX="700.0" layoutY="542.0" mnemonicParsing="false" onAction="#ventasEvent" text="Ir a Ventas" />
+        <Button fx:id="btnVentas" layoutX="670.0" layoutY="543.0" mnemonicParsing="false" onAction="#ventasEvent" text="Ir a productos" />
       <TableView fx:id="tabClientesNaturales" layoutX="470.0" layoutY="139.0" prefHeight="249.0" prefWidth="239.0">
         <columns>
           <TableColumn fx:id="columNombre" prefWidth="75.0" text="Nombre" />
@@ -43,5 +32,64 @@
         </columns>
       </TableView>
       <Button fx:id="btnAtras" layoutX="30.0" layoutY="555.0" mnemonicParsing="false" onAction="#atrasEvent" text="Atras" />
+      <GridPane layoutX="79.0" layoutY="79.0" prefHeight="385.0" prefWidth="318.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+              <Label text="Nombre:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <TextField fx:id="txtNombre" promptText="Ingrese el nombre" GridPane.columnIndex="1" />
+              <TextField fx:id="txtApellido" promptText="Ingrese el apellido" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+              <Label text="Apellido:" GridPane.rowIndex="1">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <Label text="Identificacion:" GridPane.rowIndex="2">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <TextField fx:id="txtIdentificacion" promptText="Ingrese la identificacion" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+              <Label text="Direccion:" GridPane.rowIndex="3">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <TextField fx:id="txtDireccion" promptText="Ingrese la direccion" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+              <Label text="Telefono:" GridPane.rowIndex="4">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <TextField fx:id="txtTelefono" promptText="Ingrese el telefono" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+              <Label text="Email:" GridPane.rowIndex="5">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <TextField fx:id="txtEmail" promptText="Ingrese el email" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+              <Label text="Fecha Nacimiento:" GridPane.rowIndex="6">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <DatePicker fx:id="dateFechaN" prefHeight="25.0" prefWidth="163.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+         </children>
+      </GridPane>
     </children>
 </AnchorPane>
