--- a/src/main/resources/views/registroEnvasados.fxml
+++ b/src/main/resources/views/registroEnvasados.fxml
@@ -8,24 +8,17 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventasR.Controller.RegistroEnvasadosController">
+<AnchorPane fx:id="ventana" prefHeight="600.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventasR.Controller.RegistroEnvasadosController">
    <children>
-      <Label layoutX="310.0" layoutY="25.0" text="Registro productos envasados" />
-      <Label layoutX="98.0" layoutY="127.0" text="Codigo:" />
-      <Label layoutX="96.0" layoutY="160.0" text="Nombre:" />
-      <Label layoutX="87.0" layoutY="191.0" text="Valor unitario:" />
-      <Label layoutX="65.0" layoutY="260.0" text="Cantidad existencias:" />
-      <Label layoutX="92.0" layoutY="226.0" text="Descripcion:" />
-      <Label layoutX="78.0" layoutY="375.0" text="fecha Envasado:" />
-      <Label layoutX="107.0" layoutY="331.0" text="Pais:" />
-      <TextField fx:id="txtCodigo" layoutX="202.0" layoutY="123.0" />
-      <TextField fx:id="txtNombre" layoutX="202.0" layoutY="156.0" />
-      <TextField fx:id="txtValorUnitario" layoutX="202.0" layoutY="187.0" />
-      <TextField fx:id="txtDescripcion" layoutX="202.0" layoutY="222.0" />
-      <TextField fx:id="txtCantExistente" layoutX="202.0" layoutY="256.0" />
-      <TextField fx:id="txtPeso" layoutX="203.0" layoutY="288.0" />
-      <DatePicker fx:id="dateFechaEnvasado" layoutX="196.0" layoutY="371.0" />
+      <Label layoutX="310.0" layoutY="25.0" text="Registro productos envasados">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
       <Button fx:id="btnRegistrarEnvasado" layoutX="164.0" layoutY="440.0" mnemonicParsing="false" onAction="#registrarEnvasadoEvent" text="Registrar" />
       <Button fx:id="btnActualizarEnvasado" layoutX="523.0" layoutY="403.0" mnemonicParsing="false" onAction="#actualizarEnvasadoEvent" text="Actualizar" />
       <Button fx:id="btnEliminarEnvasado" layoutX="650.0" layoutY="403.0" mnemonicParsing="false" onAction="#eliminarEnvasadoEvent" text="Eliminar" />
@@ -37,8 +30,72 @@
             <TableColumn fx:id="columPais" prefWidth="75.0" text="Pais" />
         </columns>
       </TableView>
-      <Label layoutX="95.0" layoutY="292.0" text="Peso (kg):" />
-      <ComboBox fx:id="cbPais" layoutX="202.0" layoutY="327.0" prefWidth="150.0" />
       <Button fx:id="btnAtras" layoutX="39.0" layoutY="541.0" mnemonicParsing="false" onAction="#atrasEvent" text="Atras" />
+      <GridPane layoutX="77.0" layoutY="83.0" prefHeight="351.0" prefWidth="337.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Codigo:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label text="Nombre:" GridPane.rowIndex="1">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label text="Valor unitario:" GridPane.rowIndex="2">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label text="Descripcion:" GridPane.rowIndex="3">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label text="Cantidad existencias:" GridPane.rowIndex="4">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label text="Peso (kg):" GridPane.rowIndex="5">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label text="Pais:" GridPane.rowIndex="6">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label text="fecha Envasado:" GridPane.rowIndex="7">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtCodigo" promptText="Ingrese el codigo" GridPane.columnIndex="1" />
+            <TextField fx:id="txtNombre" promptText="Ingrese el nombre" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="txtValorUnitario" promptText="Ingrese el valor unitario" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="txtDescripcion" promptText="Ingrese la descripcion" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="txtCantExistente" promptText="Ingrese la cantidad" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="txtPeso" promptText="Ingrese el peso" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <ComboBox fx:id="cbPais" prefWidth="150.0" promptText="Seleccione" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <DatePicker fx:id="dateFechaEnvasado" prefHeight="28.0" prefWidth="152.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
