--- a/src/main/resources/views/registroPerecederos.fxml
+++ b/src/main/resources/views/registroPerecederos.fxml
@@ -7,26 +7,22 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventasR.Controller.RegistroPerecedeosController">
+<AnchorPane fx:id="ventana" prefHeight="600.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventasR.Controller.RegistroPerecedeosController">
     <children>
-        <Label layoutX="305.0" layoutY="61.0" text="Registro productos perecederos" />
-        <Label layoutX="98.0" layoutY="173.0" text="Codigo:" />
-        <Label layoutX="96.0" layoutY="205.0" text="Nombre:" />
-        <Label layoutX="83.0" layoutY="249.0" text="Valor unitario:" />
-        <Label layoutX="65.0" layoutY="336.0" text="Cantidad existencias:" />
-        <Label layoutX="87.0" layoutY="292.0" text="Descripcion:" />
-        <Label layoutX="69.0" layoutY="373.0" text="fecha vencimiento:" />
-        <TextField fx:id="txtCodigo" layoutX="203.0" layoutY="161.0" />
-        <TextField fx:id="txtNombre" layoutX="203.0" layoutY="201.0" />
-        <TextField fx:id="txtValorUnitario" layoutX="203.0" layoutY="245.0" />
-        <TextField fx:id="txtDescripcion" layoutX="203.0" layoutY="288.0" />
-        <TextField fx:id="txtCantExistente" layoutX="202.0" layoutY="332.0" />
-        <DatePicker fx:id="dateFechaVencimiento" layoutX="190.0" layoutY="369.0" />
-        <Button fx:id="btnRegistrarPerecederos" layoutX="177.0" layoutY="446.0" mnemonicParsing="false" onAction="#registrarPerecederosEvent" text="Registrar" />
-        <Button fx:id="btnActualizarPerecederos" layoutX="523.0" layoutY="403.0" mnemonicParsing="false" onAction="#actualizarPerecederosEvent" text="Actualizar" />
-        <Button fx:id="btnEliminarPerecederos" layoutX="650.0" layoutY="403.0" mnemonicParsing="false" onAction="#eliminarPerecederosEvent" text="Eliminar" />
-        <TableView fx:id="tabPerecederos" layoutX="393.0" layoutY="181.0" prefHeight="200.0" prefWidth="347.0">
+        <Label layoutX="305.0" layoutY="61.0" text="Registro producto perecedero">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+        <Button fx:id="btnRegistrarPerecederos" layoutX="196.0" layoutY="456.0" mnemonicParsing="false" onAction="#registrarPerecederosEvent" text="Registrar" />
+        <Button fx:id="btnActualizarPerecederos" layoutX="485.0" layoutY="391.0" mnemonicParsing="false" onAction="#actualizarPerecederosEvent" text="Actualizar" />
+        <Button fx:id="btnEliminarPerecederos" layoutX="617.0" layoutY="391.0" mnemonicParsing="false" onAction="#eliminarPerecederosEvent" text="Eliminar" />
+        <Button fx:id="btnAtras" layoutX="39.0" layoutY="544.0" mnemonicParsing="false" onAction="#atrasEvent" text="Atras" />
+        <TableView fx:id="tabPerecederos" layoutX="402.0" layoutY="160.0" prefHeight="200.0" prefWidth="347.0">
             <columns>
                 <TableColumn fx:id="columCodigo" prefWidth="75.0" text="Codigo" />
                 <TableColumn fx:id="columValor" prefWidth="75.0" text="Valor" />
@@ -34,6 +30,58 @@
             <TableColumn fx:id="columCantidad" prefWidth="75.0" text="Cantidad" />
             </columns>
         </TableView>
-        <Button fx:id="btnAtras" layoutX="39.0" layoutY="541.0" mnemonicParsing="false" onAction="#atrasEvent" text="Atras" />
+      <GridPane layoutX="27.0" layoutY="124.0" prefHeight="309.0" prefWidth="359.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+              <Label text="Codigo:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <Label text="Nombre:" GridPane.rowIndex="1">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <Label text="Valor unitario:" GridPane.rowIndex="2">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <Label text="Descripcion:" GridPane.rowIndex="3">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <Label text="Cantidad existencias:" GridPane.rowIndex="4">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <Label text="fecha vencimiento:" GridPane.rowIndex="5">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <TextField fx:id="txtCodigo" promptText="Ingrese el codigo" GridPane.columnIndex="1" />
+              <TextField fx:id="txtNombre" promptText="Ingrese el nombre" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+              <TextField fx:id="txtValorUnitario" promptText="Ingrese el valor unitario" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+              <TextField fx:id="txtDescripcion" promptText="Ingrese la descripcion" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+              <TextField fx:id="txtCantExistente" promptText="Ingrese la cantidad" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+              <DatePicker fx:id="dateFechaVencimiento" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+         </children>
+      </GridPane>
+
     </children>
 </AnchorPane>
