--- a/src/main/resources/views/registroRefigerados.fxml
+++ b/src/main/resources/views/registroRefigerados.fxml
@@ -6,25 +6,20 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="ventana" prefHeight="600.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventasR.Controller.RegistroRefigeradosController">
+<AnchorPane fx:id="ventana" prefHeight="600.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventasR.Controller.RegistroRefigeradosController">
     <children>
-        <Label layoutX="310.0" layoutY="25.0" text="Registro productos refigerados" />
-        <Label layoutX="104.0" layoutY="148.0" text="Codigo:" />
-        <Label layoutX="97.0" layoutY="192.0" text="Nombre:" />
-        <Label layoutX="87.0" layoutY="231.0" text="Valor unitario:" />
-        <Label layoutX="70.0" layoutY="311.0" text="Cantidad existencias:" />
-        <Label layoutX="88.0" layoutY="273.0" text="Descripcion:" />
-        <Label layoutX="85.0" layoutY="395.0" text="Temperatura:" />
-        <TextField fx:id="txtCodigo" layoutX="189.0" layoutY="144.0" />
-        <TextField fx:id="txtNombre" layoutX="189.0" layoutY="188.0" />
-        <TextField fx:id="txtValorUnitario" layoutX="189.0" layoutY="227.0" />
-        <TextField fx:id="txtDescripcion" layoutX="189.0" layoutY="269.0" />
-        <TextField fx:id="txtCantExistente" layoutX="189.0" layoutY="307.0" />
-        <TextField fx:id="txtCodigoAprobacion" layoutX="189.0" layoutY="348.0" />
-        <Button fx:id="btnRegistrarRefigerado" layoutX="164.0" layoutY="440.0" mnemonicParsing="false" onAction="#registrarRefigeradoEvent" text="Registrar" />
-        <Button fx:id="btnActualizarRefigerado" layoutX="523.0" layoutY="403.0" mnemonicParsing="false" onAction="#actualizarRefigeradoEvent" text="Actualizar" />
-        <Button fx:id="btnEliminarRefigerado" layoutX="650.0" layoutY="403.0" mnemonicParsing="false" onAction="#eliminarRefigeradoEvent" text="Eliminar" />
+        <Label layoutX="310.0" layoutY="25.0" text="Registro productos refigerados">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+        <Button fx:id="btnRegistrarRefigerado" layoutX="184.0" layoutY="462.0" mnemonicParsing="false" onAction="#registrarRefigeradoEvent" text="Registrar" />
+        <Button fx:id="btnActualizarRefigerado" layoutX="501.0" layoutY="403.0" mnemonicParsing="false" onAction="#actualizarRefigeradoEvent" text="Actualizar" />
+        <Button fx:id="btnEliminarRefigerado" layoutX="615.0" layoutY="403.0" mnemonicParsing="false" onAction="#eliminarRefigeradoEvent" text="Eliminar" />
         <TableView fx:id="tabRefigerados" layoutX="437.0" layoutY="169.0" prefHeight="200.0" prefWidth="313.0">
             <columns>
                 <TableColumn fx:id="columCodigo" prefWidth="75.0" text="Codigo" />
@@ -33,8 +28,65 @@
                 <TableColumn fx:id="columTemperatura" prefWidth="85.0" text="Temperatura" />
             </columns>
         </TableView>
-        <Label layoutX="68.0" layoutY="352.0" text="Codigo Aprobacion:" />
         <Button fx:id="btnAtras" layoutX="39.0" layoutY="541.0" mnemonicParsing="false" onAction="#atrasEvent" text="Atras" />
-      <TextField fx:id="txtTemperatura" layoutX="189.0" layoutY="391.0" />
+      <GridPane layoutX="61.0" layoutY="108.0" prefHeight="321.0" prefWidth="369.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+              <Label text="Codigo:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <Label text="Nombre:" GridPane.rowIndex="1">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <Label text="Valor unitario:" GridPane.rowIndex="2">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <Label text="Descripcion:" GridPane.rowIndex="3">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <Label text="Cantidad existencias:" GridPane.rowIndex="4">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <Label text="Codigo Aprobacion:" GridPane.rowIndex="5">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <Label text="Temperatura (°C):" GridPane.rowIndex="6">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+              <TextField fx:id="txtCodigo" promptText="Ingrese el codigo" GridPane.columnIndex="1" />
+              <TextField fx:id="txtNombre" promptText="Ingrese el nombre" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+              <TextField fx:id="txtValorUnitario" promptText="Ingrese el valor unitario" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+              <TextField fx:id="txtDescripcion" promptText="Ingrese la descripcion" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+              <TextField fx:id="txtCantExistente" promptText="Ingrese la cantidad" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+              <TextField fx:id="txtCodigoAprobacion" promptText="Ingrese el codigo de aprovacion" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextField fx:id="txtTemperatura" promptText="Ingrese la temperatura" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+         </children>
+      </GridPane>
     </children>
 </AnchorPane>
